<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Terms" android:background="@color/colorPrimary">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_baseline_done_24px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" android:id="@+id/CloseButton" app:elevation="8dp"
            android:focusable="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="734dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/scrollView2"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/recipeers_ab_built_the_recipeers_app_as_an_ad_supported_app_this_service_is_provided_by_recipeers_ab_at_no_cost_and_is_intended_for_use_as_is_this_page_is_used_to_inform_visitors_regarding_our_policies_with_the_collection_use_and_disclosure_of_personal_information_if_anyone_decided_to_use_our_service_if_you_choose_to_use_our_service_then_you_agree_to_the_collection_and_use_of_information_in_relation_to_this_policy_the_personal_information_that_we_collect_is_used_for_providing_and_improving_the_service_we_will_not_use_or_share_your_information_with_anyone_except_as_described_in_this_privacy_policy_the_terms_used_in_this_privacy_policy_have_the_same_meanings_as_in_our_terms_and_conditions_which_is_accessible_at_recipeers_unless_otherwise_defined_in_this_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"
                    android:textStyle="bold" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/information_collection_and_use_for_a_better_experience_while_using_our_service_we_may_require_you_to_provide_us_with_certain_personally_identifiable_information_including_but_not_limited_to_email_first_name_surname_the_information_that_we_request_will_be_retained_by_us_and_used_as_described_in_this_privacy_policy_the_app_does_use_third_party_services_that_may_collect_information_used_to_identify_you_link_to_privacy_policy_of_third_party_service_providers_used_by_the_app_google_play_services_admob_firebase_analytics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                    android:textAlignment="viewStart" android:textStyle="bold"/>
            <TextView
                    android:text="@string/log_data_we_want_to_inform_you_that_whenever_you_use_our_service_in_a_case_of_an_error_in_the_app_we_collect_data_and_information_through_third_party_products_on_your_phone_called_log_data_this_log_data_may_include_information_such_as_your_device_internet_protocol_ip_address_device_name_operating_system_version_the_configuration_of_the_app_when_utilizing_our_service_the_time_and_date_of_your_use_of_the_service_and_other_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                    android:textAlignment="viewStart" android:textStyle="bold"/>
            <TextView
                    android:text="@string/cookies_are_files_with_a_small_amount_of_data_that_are_commonly_used_as_anonymous_unique_identifiers_these_are_sent_to_your_browser_from_the_websites_that_you_visit_and_are_stored_on_your_device_s_internal_memory_this_service_does_not_use_these_cookies_explicitly_however_the_app_may_use_third_party_code_and_libraries_that_use_cookies_to_collect_information_and_improve_their_services_you_have_the_option_to_either_accept_or_refuse_these_cookies_and_know_when_a_cookie_is_being_sent_to_your_device_if_you_choose_to_refuse_our_cookies_you_may_not_be_able_to_use_some_portions_of_this_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/we_may_employ_third_party_companies_and_individuals_due_to_the_following_reasons_to_facilitate_our_service_to_provide_the_service_on_our_behalf_to_perform_service_related_services_or_to_assist_us_in_analyzing_how_our_service_is_used_we_want_to_inform_users_of_this_service_that_these_third_parties_have_access_to_your_personal_information_the_reason_is_to_perform_the_tasks_assigned_to_them_on_our_behalf_however_they_are_obligated_not_to_disclose_or_use_the_information_for_any_other_purpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/we_value_your_trust_in_providing_us_your_personal_information_thus_we_are_striving_to_use_commercially_acceptable_means_of_protecting_it_but_remember_that_no_method_of_transmission_over_the_internet_or_method_of_electronic_storage_is_100_secure_and_reliable_and_we_cannot_guarantee_its_absolute_security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/this_service_may_contain_links_to_other_sites_if_you_click_on_a_third_party_link_you_will_be_directed_to_that_site_note_that_these_external_sites_are_not_operated_by_us_therefore_we_strongly_advise_you_to_review_the_privacy_policy_of_these_websites_we_have_no_control_over_and_assume_no_responsibility_for_the_content_privacy_policies_or_practices_of_any_third_party_sites_or_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/these_services_do_not_address_anyone_under_the_age_of_13_we_do_not_knowingly_collect_personally_identifiable_information_from_children_under_13_in_the_case_we_discover_that_a_child_under_13_has_provided_us_with_personal_information_we_immediately_delete_this_from_our_servers_if_you_are_a_parent_or_guardian_and_you_are_aware_that_your_child_has_provided_us_with_personal_information_please_contact_us_so_that_we_will_be_able_to_do_necessary_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/we_may_update_our_privacy_policy_from_time_to_time_thus_you_are_advised_to_review_this_page_periodically_for_any_changes_we_will_notify_you_of_any_changes_by_posting_the_new_privacy_policy_on_this_page_these_changes_are_effective_immediately_after_they_are_posted_on_this_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_weight="1"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/if_you_have_any_questions_or_suggestions_about_our_privacy_policy_do_not_hesitate_to_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1"
                    android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>