<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateRecipe" android:background="@color/backgroundColor">


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/scrollView4"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp" android:id="@+id/food_image"
                            android:contentDescription="@string/todo" android:layout_marginTop="8dp"
                            android:src="@drawable/ic_baseline_insert_photo_24px" android:scaleType="fitXY"/>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/food_name"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:id="@+id/FoodNameLayout">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/FoodName"
                                android:inputType="text" android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/description"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:id="@+id/FoodDescriptionLayout">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/FoodDescription"
                                android:inputType="textMultiLine"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/recipe"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:id="@+id/FoodRecipeLayout">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/FoodRecipe"
                                android:inputType="textMultiLine"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                            android:text="@string/add_ingredients"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/addIngredients"
                            android:layout_weight="1"
                            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                            style="@style/Widget.MaterialComponents.Button" android:layout_marginRight="8dp"
                            android:layout_marginLeft="8dp"/>
                </LinearLayout>
            </ScrollView>
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/food_list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/scrollView4">
            </ListView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="bottom"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
    >
        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/CancelButton" android:layout_weight="1"
                android:layout_marginStart="24dp" android:layout_marginEnd="32dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/SubmitButton" android:layout_weight="1"
                android:layout_marginEnd="24dp" android:layout_marginStart="32dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>