<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
             android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">


    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/message_box_profile_pic"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/ic_baseline_insert_photo_24px"
                    android:contentDescription="@string/food_grid_image" android:scaleType="fitXY"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/message_box_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/messgae_box_profile_name"
                        android:layout_marginTop="8dp" android:layout_marginStart="4dp" android:layout_marginEnd="4dp"
                        android:textStyle="bold" android:fontFamily="@font/roboto"
                        android:textColor="@color/colorAccent"/>
                <TextView
                        android:text="@string/message_box_context"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/message_box_context"
                        android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp" android:layout_marginEnd="4dp"
                        android:fontFamily="@font/roboto" android:textColor="@color/textColorLight"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>