<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodCard" android:background="@color/backgroundColor">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/materialCardView" android:layout_marginTop="32dp">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary" android:orientation="vertical">
                    <ImageView
                            android:src="@drawable/sample_food"
                            android:layout_width="match_parent"
                            android:layout_height="400dp" android:id="@+id/user_avatar"
                            android:contentDescription="@string/user_avatar"
                            tools:src="@tools:sample/avatars"/>
                    <TextView
                            android:text="@string/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/username"
                            android:visibility="visible"
                            android:textSize="30sp" android:textStyle="bold"
                            android:fontFamily="@font/roboto_thin"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            android:layout_marginStart="8dp" android:textAlignment="center"/>
                    <Button
                            android:text="@string/add_friend_btn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp" android:id="@+id/add_friend_btn"
                            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>